--- a/style.css
+++ b/style.css
@@ -36,3 +36,30 @@
 .checkbox-fil{
     width: 48%;
 }
+.scroll-prdt{
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
+.scroll-prdt::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+  .scroll-prdt::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+  
+  .scroll-prdt::-webkit-scrollbar-thumb {
+    background-color: #eab142;
+    border-radius: 6px;
+  }
+  
+  .scroll-prdt::-webkit-scrollbar-thumb:hover {
+    background: #aa8130;
+  }
+@media (min-width: 992px){
+.modal-lg {
+    max-width: 85% !important;
+}
+
+}
