--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 .title-prd{
     width: 25%;
 }
-
+.delete-button{
+    float: right;
+}
 .line-through{
     text-decoration: line-through;
 }
@@ -9,6 +11,7 @@
     font-size: 25px;
     font-weight: bold;
     color: red;
+    margin-bottom: 0px;
 }
 .info-prdt p{
     margin-bottom: 0px;
@@ -26,6 +29,8 @@
 .name-prdt{
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 0px;
+
 }
 .center-div{
     display: flex;
