--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@
     width: 100%;
     
 }
-
+.d-in-bl{
+    display: inline-block;
+}
+.btn-total{
+    border: none;
+    background: none;
+}
 .percent {
     background-color: #FFB6C1;
     color: #ff0000;
