--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     padding: 10px;
   }
-.totalll{
+.total-prdt{
     text-align: center;
     font-size: 24px;
     font-weight: bold;
@@ -54,8 +54,9 @@
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 0px;
-
+    color: black;
 }
+
 .center-div{
     display: flex;
     align-items: center;
